--- a/mobile_first/assets/css/style.css
+++ b/mobile_first/assets/css/style.css
@@ -1,4 +1,4 @@
-
+@charset "utf-8";
 
 *{
     margin: 0;
@@ -6,6 +6,13 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+/*   #3f264d #5d2747 #9f3647 #db4648 #fb9553 
+     device breakpoints
+     mobile 600 px 
+     tablet 768 px
+     desktop 992 px
+     smart_tv 1200 px*/
 
 html {
     height: 100vh;
@@ -29,12 +36,82 @@ header {
 
 header>h1 {
     text-align: center;
-    color: whitesmoke;
+    color: rgb(255, 255, 255);
     padding: 3px;
-    text-shadow: #c5a898 1px 1px 10px;
     margin-top: 17px;
 
 }
+
+#burger {
+    background-color: #3f264d;
+    display: block;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    margin: auto;
+    padding: 7px;
+    width: 90vw;
+    cursor: pointer;
+}
+
+#burger:hover {
+    background-color: #fb9553;
+
+}
+
+menu {
+    color: rgb(255, 255, 255);
+    text-align: center;
+    list-style-type: none;
+    width: 90vw;
+    margin: auto;
+}
+
+menu>ul {
+    list-style-type: none;
+}
+
+menu>ul>li>a {
+    display: block;
+    padding: 7px;
+    text-decoration: none;
+    text-align: center;
+    background-color: #3f264d;
+    border-radius: 0px 0px 0px 0px;
+    color: rgb(255, 255, 255);
+    margin: auto;
+
+}
+
+menu>ul>li>a:hover {
+    background-color: #fb9553;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
+
+
+main {
+    background-color: #fb9553;
+    width: 90vw;
+    margin: auto;
+    border-radius: 7px 7px 0px 0px;
+    margin-top: 7px;
+    padding: 3px;
+
+}
+
+article>h2 {
+    padding-bottom: 17px;
+
+}
+
+article>p {
+    text-align: justify;
+    margin-bottom: 17px;
+    text-indent: 17px;
+}
+
+
+/* configuração e definição de imagens para mobile-first */
 
 img {
     display: block;
